--- a/install.Rmd
+++ b/install.Rmd
@@ -90,8 +90,8 @@ install_github("datacloning/dclone")
 ```
 
 <ul class="pager">
-<li class="previous"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.previous }}.html"><i class="fa fa-caret-left"></i> Intro</a></li>
-<li class="next"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.next }}.html">Usage <i class="fa fa-caret-right"></i></a></li>
+<li class="previous"><a href="{{ site.baseurl }}/dc.html"><i class="fa fa-caret-left"></i> Intro</a></li>
+<li class="next"><a href="{{ site.baseurl }}/usage.html">Usage <i class="fa fa-caret-right"></i></a></li>
 </ul>
 
 
