--- a/dc.Rmd
+++ b/dc.Rmd
@@ -64,5 +64,5 @@ how to write high level functions for specific modeling problems.
 [^Solymos2010]: S&oacute;lymos, P., 2010. dclone: Data Cloning in R. *The R Journal* **2(2)**, 29&ndash;37. <i class="fa fa-file-pdf-o"></i>&nbsp;[PDF](http://journal.r-project.org/archive/2010-2/RJournal_2010-2_Solymos.pdf)
 
 <ul class="pager">
-<li class="next"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.next }}.html">Install <i class="fa fa-caret-right"></i></a></li>
+<li class="next"><a href="{{ site.baseurl }}/install.html">Install <i class="fa fa-caret-right"></i></a></li>
 </ul>
