--- a/usage.Rmd
+++ b/usage.Rmd
@@ -190,7 +190,6 @@ stopCluster(cl)
 Easy!
 
 <ul class="pager">
-<li class="previous"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.previous }}.html"><i class="fa fa-caret-left"></i> Install</a></li>
-<li class="next"><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.next }}.html">Next <i class="fa fa-caret-right"></i></a></li>
+<li class="previous"><a href="{{ site.baseurl }}/install.html"><i class="fa fa-caret-left"></i> Install</a></li>
 </ul>
 
