--- a/usage.Rmd
+++ b/usage.Rmd
@@ -16,28 +16,13 @@ p <- 0.3 # true parameter value
 y <- rbinom(n = n, size = 1, prob = p)
 ```
 
-## Conventional maximum likelihood estimation
-
-Maximum likelihood estimation can be done
-using the `glm` function in R:
-
-```r
-m <- glm(formula = y ~ 1, family=binomial("logit"))
-
-summary(m)
-coef(m)
-exp(coef(m)) / (1 + exp(coef(m)))
-plogis(coef(m))
-mean(y)
-```
-
 ## Bayesian analysis in JAGS
 
 ```r
 library(dclone)
 library(rjags)
 
-## model spacification
+## model specification
 model <- custommodel("model {
     for (i in 1:n) {
         #Y[i] ~ dbin(p, 1) # Binomial(N,p)
@@ -99,42 +84,18 @@ dcdiag(dcfit)
 plot(dcdiag(dcfit))
 ```
 
-### Modification
-
-If locations are treated as i.i.d., it is possible to
-replicate the vector, so that length
-becomes `n * K`.
-
-```r
-model <- custommodel("model {
-    for (i in 1:n) {
-        Y[i] ~ dbin(p, 1)
-    }
-    p ~ dunif(0.001, 0.999)
-}")
-dat <- list(Y = y, n = n)
-dcfit <- dc.fit(data = dat, params = "p", model = model,
-    n.clones = c(1,2,4,8), multiply = "n")
-```
-
 ## High performance computing
 
-Cloning the data increases the size of the
-DAG (directed acyclic graph). This means
-increasing computation times. 
-Parallel computations for can be utilized
-to cut down computing times.
-
+Because MCMC chains are independent, is can be seen as an 
+[embarrassingly parallel problem](https://en.wikipedia.org/wiki/Embarrassingly_parallel).
 On Windows, the only option is through
 clusters (the cluster object `cl` initialized
 using the `makeCluster` function and alikes).
 On other platforms, forking can be used 
 (`cl <- 3`) besides clusters.
 
-### Bayesian analysis
-
 ```r
-## model spacification
+## model specification
 model <- custommodel("model {
     for (i in 1:n) {
         #Y[i] ~ dbin(p, 1) # Binomial(N,p)
@@ -146,11 +107,17 @@ model <- custommodel("model {
 ## data
 dat <- list(Y = y, n = n)
 
-## Bayesian MCMC results
+## parallel Bayesian MCMC results
 cl <- makeCluster(3)
 pfit <- jags.parfit(cl, data = dat, params = "p", model = model)
 stopCluster(cl)
 ```
+
+Data cloning increases the size of the
+DAG (directed acyclic graph). This means
+increasing computation times. 
+Parallel computations for can be utilized
+to cut down computing times.
 
 ```r
 ## dclone-ified model specification
@@ -166,31 +133,13 @@ model <- custommodel("model {
 ## dclone-ified data specification
 dat <- list(Y = dcdim(data.matrix(y)), n = n, K = 1)
 
-## data cloning based MCMC results
+## parallel data cloning based MCMC results
 cl <- makeCluster(3)
 dcpfit <- dc.parfit(cl, data = dat, params = "p", model = model,
     n.clones = c(1,2,4,8), unchanged = "n", multiply = "K",
     n.chains = 3, partype = "parchains")
 stopCluster(cl)
 ```
-
-```r
-model <- custommodel("model {
-    for (i in 1:n) {
-        Y[i] ~ dbin(p, 1)
-    }
-    p ~ dunif(0.001, 0.999)
-}")
-dat <- list(Y = y, n = n)
-
-cl <- makeCluster(3)
-dcpfit <- dc.parfit(cl, data = dat, params = "p", model = model,
-    n.clones = c(1,2,4,8), multiply = "n",
-    n.chains = 3, partype = "parchains")
-stopCluster(cl)
-```
-
-Easy!
 
 <ul class="pager">
 <li class="previous"><a href="{{ site.baseurl }}/install.html"><i class="fa fa-caret-left"></i> Install</a></li>
