--- a/courses/2015/montpellier/notes-01-basics.Rmd
+++ b/courses/2015/montpellier/notes-01-basics.Rmd
@@ -694,7 +694,7 @@ dcfit <- dc.fit(data = dat, params = "p", model = model,
 
 * Data generation,
 * likelihood (analytical, graphical and also in JAGS),
-* frequentist inference ,
-* bayesian inference ,
-* data cloning to get MLE and confidence intervals .
+* frequentist inference,
+* Bayesian inference,
+* data cloning to get MLE and confidence intervals.
 
