--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -43,12 +43,21 @@ True status: $$ Y_i \sim Bernoulli(\varphi) $$.
 
 Observed status: $$ (W_i \mid Y_i = y_i) \sim Bernoulli(p^{y_i} (1 - p)^{1 - y_i}) $$.
 
-An important thing to note here is that we only observe ’s and not the true statuses are unknown. We can use the standard probability rules to compute:
+An important thing to note here is that we only observe $W$'s and not the true statuses ($Y$) which are unknown. We can use the standard probability rules to compute:
 
-This is called the marginal distribution of . We can write down the likelihood function as a function of parameters .
+$$ P(W_i = 1) = P(W_i = 1 \mid Y_i = 1) P(Y_i = 1) + P(W_i = 1 \mid Y_i = 0) P(Y_i = 0) = p \varphi + 0 \cdot (1 - \varphi) = p \varphi $$
 
+$$ P(W_i = 0) = P(W_i = 0 \mid Y_i = 1) P(Y_i = 1) + P(W_i = 0 \mid Y_i = 0) P(Y_i = 0) = 1 - p \varphi $$
 
-Cautionary note: Just because one can write down the likelihood function, it does not mean one can estimate the parameters. 
+This is called the marginal distribution of $W$. We can write down the likelihood function as a function of parameters $(p, \varphi)$.
+
+$$ L(p, \varphi; w_{1}, w_{2}, \ldots, w_{n}) = \prod_{i=1}^{n} P(W_i = w_i; p, \varphi) = \prod_{i=1}^{n} (p \varphi)^{w_i} (1 - p \varphi)^{1 - w_i} $$
+
+> #### Cautionary note
+>
+> Just because one can write down the likelihood function, 
+> it does not mean one can estimate the parameters. 
+
 This is a simple situation with two parameters and hence we can plot the likelihood function as a contour plot. 
 R commands:
 Data generation
