--- a/courses/2015/montpellier/notes-02-hmods.Rmd
+++ b/courses/2015/montpellier/notes-02-hmods.Rmd
@@ -141,7 +141,7 @@ plot(fit)
 pairs(fit)
 ```
 
-![Likelihood surface](./images-02/occupancy-surface.png)
+![MCMC output](./images-02/jags-pairs.png)
 
 > ### Bayesian inference
 > 
